Name:          Gamgine
Version:       0.1
License:       BSD3
License-file:  LICENSE
Author:        Daniel Trstenjak
Maintainer:    daniel.trstenjak@gmail.com
Build-Type:    Simple
Category:      Library
Cabal-Version: >=1.6
Synopsis:      Some kind of game library or set of utilities.
Description:   Some kind of game library or set of utilities.

data-files:    Ressources/Fonts/*.glf

Extra-source-files: c_libraries/glf/glf.h
                    c_libraries/glf/glf.c
                    Gamgine/Utils.cpp

library
  ghc-options:   -pgmPcpphs -optP--cpp
  extensions:    CPP
  cpp-options:   -DCABAL
  exposed-modules: Gamgine.Coroutine
                   Gamgine.Bool
                   Gamgine.Math.Matrix
                   Gamgine.Math.Utils
                   Gamgine.Math.BoxTree
                   Gamgine.Math.Vect
                   Gamgine.Math.Box
                   Gamgine.State.RenderState
                   Gamgine.State.StateTreeZipper
                   Gamgine.State.MouseInfo
                   Gamgine.State.KeyInfo
                   Gamgine.State.State
                   Gamgine.State.StateTree
                   Gamgine.State.InputInfo
                   Gamgine.Font.GLF
                   Gamgine.Control
                   Gamgine.Utils
                   Gamgine.Gfx
                   Gamgine.Engine
                   Gamgine.Image.PNG.Internal.Filters
                   Gamgine.Image.PNG.Internal.Parser
                   Gamgine.Image.PNG.Internal.CRC
                   Gamgine.Image.PNG
                   Gamgine.System
                   Gamgine.Zipper
                   Gamgine.IORef

  Build-Depends: base > 3 && < 5, GLFW-b, OpenGLRaw, mtl, time, Vec >= 0.9.9, utility-ht, directory, StateVar, array, bytestring, unordered-containers, data-lens, pretty-show, cpphs, filepath, parsec, zlib, ListZipper, composition

  Include-dirs: .
                Gamgine
                c_libraries/glf
  Includes:     glf.h
  C-sources:    c_libraries/glf/glf.c
  CC-Options:   -Wno-unused-result
